<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:elevation="8dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="265dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/montserrat"
            android:maxLines="2"
            android:text="@string/heading_txt"
            android:textColor="@color/sky_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/userName"
            app:layout_constraintStart_toEndOf="@+id/heading"
            app:layout_constraintTop_toTopOf="@+id/userName">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/profile_1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userName"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/montserrat"
            android:maxLines="2"
            android:padding="5dp"
            android:text="@string/new_blogger"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/date"
            android:textColor="@color/dateColor"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/heading"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/post"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.03"
            android:lineHeight="22sp"
            android:maxLines="4"
            android:text="@string/blog_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/readMoreBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sky_blue"
            android:fontFamily="@font/montserrat"
            android:text="@string/read_more"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/post"
            app:layout_constraintTop_toBottomOf="@+id/post" />

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/_20"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/readMoreBtn"
            app:layout_constraintStart_toEndOf="@+id/readMoreBtn"
            app:layout_constraintTop_toTopOf="@+id/readMoreBtn" />

        <ImageButton
            android:id="@+id/likeBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like_button"
            app:layout_constraintBottom_toBottomOf="@+id/likeCount"
            app:layout_constraintStart_toEndOf="@+id/likeCount"
            app:layout_constraintTop_toTopOf="@+id/likeCount"
            app:srcCompat="@drawable/ic_black_heart" />

        <ImageButton
            android:id="@+id/postSaveBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/likeBtn"
            app:layout_constraintStart_toEndOf="@+id/likeBtn"
            app:layout_constraintTop_toTopOf="@+id/likeBtn"
            app:srcCompat="@drawable/ic_save_red" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="heading" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>